# harmonicSum

./: .gitignore  CMakeLists.txt  README.md
gnuplot/: results-map.gp
src/: compute_msd.c  data_generate.c  ex2DHRSUM.c
